--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,20 @@
     padding: 0;
     box-sizing:  border-box;
     font-family: Finland;
+
 }
 
+body{
+    background-color: #1B191D;
+}
 
+.bg-custom {
+    background-color: rgb(20, 21, 26);
+}
 
-
+.projects-section {
+    background-color: #1B191D;
+}
 
 .sec1
 {
@@ -23,16 +32,53 @@
 
 }
 
-
-
-.barra_nav
+.sec2
 {
-    padding-left: 4%;
-    padding-right: 4%;
+
     width: 100%;
-    display: flex;
-    align-items: center;
+    min-height: 100vh;
+    box-sizing: border-box;
+    overflow:  hidden;
+    box-sizing: border-box;
+    background-color: #1B191D;
+    background-size: cover;
+    background-position: center;
+
 }
+
+.sec2 p {
+    font-size: 2.7vh;
+    color: #707070;
+}
+
+.sec2 button {
+    margin-left: 7.3vw;
+    border: none;
+    color: white;
+    padding: 2.1vh 4.7vw;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 3.2vh;
+    cursor: pointer;
+    background-color: #36468F;
+    border-radius: 30px;
+}
+
+.sec2 .content .imagen{
+    max-height: 100px;
+
+}
+
+
+/*.barra_nav*/
+/*{*/
+/*    padding-left: 4%;*/
+/*    padding-right: 4%;*/
+/*    width: 100%;*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*}*/
 
 .logo
 {
@@ -47,25 +93,25 @@
     cursor: pointer;
 }
 
-nav
-{
-    flex: 1;
-    text-align: right;
-}
+/*nav*/
+/*{*/
+/*    flex: 1;*/
+/*    text-align: right;*/
+/*}*/
 
-nav ul li
-{
-    list-style: none;
-    display: inline-block;
-    margin-right: 30px;
-}
+/*nav ul li*/
+/*{*/
+/*    list-style: none;*/
+/*    display: inline-block;*/
+/*    margin-right: 30px;*/
+/*}*/
 
-nav ul li a
-{
-    text-decoration: none;
-    color: white;
-    font-size: 20px;
-}
+/*nav ul li a*/
+/*{*/
+/*    text-decoration: none;*/
+/*    color: white;*/
+/*    font-size: 20px;*/
+/*}*/
 
 .content{
     width: 30.11vw;
@@ -97,7 +143,7 @@ nav ul li a
 }
 
 
-.sec1 button {
+button {
     margin-left: 7.3vw;
     border: none;
     color: white;
