--- a/css/styles.css
+++ b/css/styles.css
@@ -39,25 +39,13 @@ a{
     background-size: cover !important;
 }
 
-.sec-nosotros h2{
-    color: white !important;
-    font-size: 2vw !important;
-}
-.sec-nosotros a{
-    color: white !important;
-    font-size: 2vw !important;
-}
-
-.sec-nosotros h1{
-    color: white !important;
-    font-size: 3.5vw !important;
-}
 
 
 
 
-/* Mayor a 800 */
-@media (min-width: 800px) {
+
+/* Mayor a 990 */
+@media (min-width: 990px) {
 
     .sec1
     {
@@ -76,6 +64,20 @@ a{
         max-height: 100px;
 
     }
+
+
+    /*Novedades Imagenes*/
+    .img-fluid{
+        border-radius: 50px !important;
+    }
+
+    .sec2 p{
+        margin-top: 5vw !important;
+        margin-bottom: 5vw !important;
+        font-size: 1.5vw;
+    }
+
+
 
     .sec-nosotros .titulo{
         padding-top-top: 4vw !important;
@@ -155,6 +157,20 @@ a{
         border-radius: 5vw !important;
     }
 
+    .sec-nosotros h2{
+        color: white !important;
+        font-size: 2vw !important;
+    }
+    .sec-nosotros a{
+        color: white !important;
+        font-size: 2vw !important;
+    }
+
+    .sec-nosotros h1{
+        color: white !important;
+        font-size: 3.5vw !important;
+    }
+
 
 
     .informacion{
@@ -186,8 +202,8 @@ a{
 
 
 
-/* Menor a 800 */
-@media (max-width: 800px) {
+/* Menor a 990 */
+@media (max-width: 990px) {
 
 
     .navbar {
@@ -197,44 +213,63 @@ a{
     .sec1
     {
 
-        width: 100%;
+        width: 100vw;
         height: 100vh;
-        box-sizing: border-box;
         overflow:  hidden;
-        box-sizing: border-box;
         background-image: url('../img/Fondo1.jpg');
         background-size: cover;
         background-position: center;
 
         display: flex;
         justify-content: center;
-        align-items: center;
 
     }
 
-
-
-    .sec2 .content .imagen{
-        max-height: 100px;
-
-    }
-
-    .content{
-
+    .sec1 .content{
         margin-top: auto;
         margin-left: auto;
         margin-right: auto;
         margin-bottom: auto;
 
+        text-align: center;
+
+
     }
 
-    .content h1{
-        font-size: 14vw;
-        max-width: 19vh;
+    .sec1 .content h1{
+
+
+
+        font-size: 20vw;
+        max-width: 55vh;
         line-height: 65%;
         color: white;
-        text-align: center;
+
     }
+
+    .sec1 p {
+        font-size: 3vh;
+        color: white;
+        margin-top: 5vh;
+        margin-bottom: 5vh;
+    }
+
+    /*Novedades Imagenes*/
+    .img-fluid{
+        border-radius: 30px !important;
+    }
+
+    .sec2 h1{
+        font-size: 10vw !important;
+    }
+
+    .sec2 p{
+        margin-top: 5vw !important;
+        margin-bottom: 5vw !important;
+        font-size: 6vw !important;
+    }
+
+
 
     .textBox{
 
@@ -242,10 +277,7 @@ a{
 
     }
 
-    .sec1 p {
-        font-size: 2.7vh;
-        color: #707070;
-    }
+
 
 
     button {
@@ -295,6 +327,20 @@ a{
 
     }
 
+    .sec-nosotros h2{
+        color: white !important;
+        font-size: 8vw !important;
+    }
+    .sec-nosotros a{
+        color: white !important;
+        font-size: 8vw !important;
+    }
+
+    .sec-nosotros h1{
+        color: white !important;
+        font-size: 12vw !important;
+    }
+
 
 
     .informacion{
@@ -324,22 +370,30 @@ a{
     }
 
 
-
-
-    footer .container .row .col-lg-4{
+    footer .container-fluid .row{
         justify-content: center;
-        display: grid;
+        width: 100vw !important;
+        display: inline-grid;
+
     }
 
-    footer .container .row .col-lg-3 {
-        text: center;
-        justify-content: center;
-        display: grid;
+    footer .container-fluid .row .col{
+        text-align: center;
+        width: 100vw !important;
+
     }
 
-    footer .container .row{
-        justify-content: center;
-        display: grid;
+
+
+    .footer-copy{
+        margin: 0;
+        padding: 0;
+        border: 0;
+        justify-content: center !important;
+    }
+
+    .logo-footer{
+        display: none !important;
     }
 
 
