--- a/css/styles.css
+++ b/css/styles.css
@@ -135,9 +135,14 @@ a{
         font-size: 180px;
     }
 
+    .margen-nov-1{
+        padding-top: max(15vh,50px) !important;
+        margin-bottom: 10vh !important;
+    }
+
     .margen-nov{
         margin-top: 20vh !important;
-        margin-bottom: 20vh !important;
+        margin-bottom: 15vh !important;
     }
 
     .plan-section{
