--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,10 @@ a{
 /* Mayor a 990 */
 @media (min-width: 990px) {
 
+    .navbar-nav a{
+        font-size: 25px;
+    }
+
     .sec1
     {
 
@@ -69,7 +73,6 @@ a{
         margin-top: 9.54vh;
         margin-bottom: min(15.4vh,100px);
         margin-left: 4.5vw;
-
         color: white;
 
     }
@@ -88,7 +91,7 @@ a{
     .sec2 p{
         margin-top: 5vw !important;
         margin-bottom: 5vw !important;
-        font-size: 1.5vw;
+        font-size: max(1.5vw,25px);
     }
 
 
@@ -109,7 +112,7 @@ a{
 
 
     .sec1 p {
-        font-size: 2.7vh;
+        font-size: max(2.7vh, 55px) !important;
         color: #707070;
     }
 
@@ -120,7 +123,7 @@ a{
         padding: 0.8vw 4vw;
         text-align: center;
         text-decoration: none;
-        font-size: 1.5vw;
+        font-size: max(1.5vw, 20px);
         cursor: pointer;
         background-color: #36468F;
         border-radius: 30px;
@@ -455,7 +458,7 @@ a{
 }
 
 .sec1 p{
-    font-size: max(1.5vw,20px) !important;;
+    font-size: max(1.5vw,25px) !important;;
 }
 
 
